using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace Review.StateMachines
{
    public enum ResultType
    {
        Success,
        False,
        Processing,
        Avort
    }
}