namespace Runtime.Enemy
{
    public enum EnemyType
    {
        Taunt = 0,
        Golem = 11
    }
}
